objects/DMAPP__DM_DVLS_Module_User__c.object
<CustomObject>
    <description>NO CONFIGURATION SUPPORT

This object is responsible for storing user activity on a given eLearning Module</description>
    <fields>
        <fullName>DMAPP__DM_DVLS_Curriculum_User__c</fullName>
        <label>Dealmaker Curriculum User</label>
        <referenceTo>DMAPP__DM_DVLS_Curriculum_User__c</referenceTo>
        <relationshipName>DM_DVLS_Module_Users</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__DVLS_Module__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Dealmaker Module</label>
        <referenceTo>DMAPP__DM_DVLS_Module__c</referenceTo>
        <relationshipLabel>Module Users</relationshipLabel>
        <relationshipName>DVLS_Module_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Is_Passed__c</fullName>
        <formula>IF(DMAPP__Score__c &gt;= 0.80, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Passed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Quicklink_Complete_Rollup__c</fullName>
        <label>Quicklink Complete Rollup</label>
        <summarizedField>DMAPP__DM_DVLS_Component_User__c.DMAPP__Quicklink_Complete_Rollup__c</summarizedField>
        <summaryForeignKey>DMAPP__DM_DVLS_Component_User__c.DMAPP__DM_DVLS_Module_User__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMAPP__Quicklink_Count_Rollup__c</fullName>
        <label>Quicklink Count Rollup</label>
        <summarizedField>DMAPP__DM_DVLS_Component_User__c.DMAPP__Quicklink_Count_Rollup__c</summarizedField>
        <summaryForeignKey>DMAPP__DM_DVLS_Component_User__c.DMAPP__DM_DVLS_Module_User__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMAPP__Score_Rollup__c</fullName>
        <label>Score Rollup</label>
        <summarizedField>DMAPP__DM_DVLS_Component_User__c.DMAPP__Score_Rollup__c</summarizedField>
        <summaryForeignKey>DMAPP__DM_DVLS_Component_User__c.DMAPP__DM_DVLS_Module_User__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMAPP__Score__c</fullName>
        <formula>IF(OR(DMAPP__DVLS_Module__r.DMAPP__Question_Rollup__c == 0, ISNULL(DMAPP__Score_Rollup__c ), ISNULL(DMAPP__DVLS_Module__r.DMAPP__Question_Rollup__c)), NULL,DMAPP__Score_Rollup__c / DMAPP__DVLS_Module__r.DMAPP__Question_Rollup__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Status__c</fullName>
        <formula>IF(DMAPP__Quicklink_Complete_Rollup__c &gt;= DMAPP__DVLS_Module__r.DMAPP__Quicklink_Rollup__c
      , &apos;Completed&apos;, &apos;Started&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Module User</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>eLearning Module User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Module Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>